Change the optimization parameters to Lie algebra.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,6 +33,7 @@ find_package(Ceres REQUIRED)
 
 include_directories(
   include
+  ./Thirdparty
   ${catkin_INCLUDE_DIRS} 
   ${PCL_INCLUDE_DIRS}
   ${CERES_INCLUDE_DIRS}
